Able to read data from csv file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <link rel="stylesheet" href="lightbox.min.css">
 <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
 <!------------------LIght BOx for Gallery-------------->
+
+
+<script type="text/javascript" src="\script.js"></script>
+<script type="text/javascript" src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script type="text/javascript" src="jquery-csv.js"></script>
 <title>Worklink</title>
 </head>
 <body>
