--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
 <!------------------LIght BOx for Gallery-------------->
 <link rel="stylesheet" href="lightbox.min.css">
 <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script type="text/javascript" src="\script.js"></script>
+<script type="text/javascript" src="jquery-csv.js"></script>
 <style>
     html {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
