--- a/profile.html
+++ b/profile.html
@@ -13,9 +13,8 @@
 <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
 <!------------------LIght BOx for Gallery-------------->
 
-
-
-
+<script type="text/javascript" src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script type="text/javascript" src="\script.js"></script>
 
 <title>Worklink</title>
 </head>
