--- a/register.html
+++ b/register.html
@@ -11,6 +11,9 @@
 <!------------------LIght BOx for Gallery-------------->
 <link rel="stylesheet" href="lightbox.min.css">
 <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script type="text/javascript" src="\script.js"></script>
+<script type="text/javascript" src="jquery.csv.min.js"></script>
 <style>
     html {
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -162,6 +165,15 @@ signUpForm.addEventListener("submit", (e) =>{
         if(email.match(/^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|.(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/)){
             if(password == confirmPassword){
                 alert("Register Succesfully! Please login to your account.");
+
+                // Read database
+                dbData = readDB();
+                alert(dbData);
+
+                // Create an User object
+                let newUser = {"id": id, "username": username, "email": email, "password": password}
+
+
                 window.location.href = "/login.html";
             }
             else{
