Changed "current user"

--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,8 @@
         <!-------------------------------NAvigation Starts------------------>
 
         <nav class="navbar navbar-expand-md navbar-dark" style="background-color:lightsalmon;">
-                <a href="index.html" class="navbar-brand"><img src="img/brand-white.png" alt="logo" class="img-fluid"
-                                width="80px" height="100px"></a>
+                <a href="index.html" class="navbar-brand"><img src="img/png/logo-no-background.png" alt="logo" class="img-fluid"
+                                width="200vw" height="400vh"></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#responsive"><span
                                 class="navbar-toggler-icon"></span></button>
@@ -37,9 +37,6 @@
                 <div class="collapse navbar-collapse" id="responsive">
                         <ul class="navbar-nav mr-auto text-capitalize">
                                 <li class="nav-item"><a href="connections.html" class="nav-link active">Connections</a></li>
-                                <li class="nav-item"><a href="profile.html" class="nav-link">Channel</a></li>
-                                <li class="nav-item"><a href="#modalview" class="nav-link"
-                                                data-toggle="modal">Friends</a></li>
                                 <li class="nav-item"><a href="#" class="nav-link d-md-none">logout</a></li>
                         </ul>
 
@@ -300,7 +297,7 @@
 
         <div class="banner">
                 <div class="banner-title d-flex flex-column justify-content-center align-items-center">
-                        <img src="img/avatar-dhg.png" alt="img" class="rounded-circle" width="200vw" height="200vh">
+                        <img src="img/png/current-user.png" alt="img" class="rounded-circle" width="200vw" height="200vh">
                         <h3 id="username" class="text-light">Dave Gamache</h3>
                         <p id="description" class="text-light">I wish i was a little bit taller, wish i was a baller,
                                 wish i had a girl… also.</p>
