--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
         <!-------------------------------NAvigation Starts------------------>
 
         <nav class="navbar navbar-expand-md navbar-dark" style="background-color:lightsalmon;">
-                <a href="index.html" class="navbar-brand"><img src="img/png/logo-no-background.png" alt="logo"
+                <a href="connections.html" class="navbar-brand"><img src="img/png/logo-no-background.png" alt="logo"
                                 class="img-fluid" width="200vw" height="400vh"></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#responsive"><span
